Fix #231: Horizontal scrollbar issue
We have defined our own `container-xxl` class copying the existing
Bootstrap ones, but without extending `container-fluid` like the
Bootstrap class do. It's possible that change in more recent releases of
Bootstrap and it was not noticed during upgrades.

--- a/resources/sass/_common.scss
+++ b/resources/sass/_common.scss
@@ -74,6 +74,8 @@ img.pixelated {
 }
 
 .container-xxxl {
+    @extend .container-fluid;
+
     max-width: 1920px;
     margin-left: auto;
     margin-right: auto;
